--- a/py/build.gradle
+++ b/py/build.gradle
@@ -10,14 +10,14 @@ ext {
 
 description = "PySparkling - Sparkling-Water Python Package"
 
-configurations {
-    mojopipeline
-}
+//configurations {
+//    mojopipeline
+//}
 dependencies {
     compile project(path: ':sparkling-water-assembly')
 
     // This dependency is used just for tests
-    mojopipeline "ai.h2o:mojo2-runtime:${mojoPipelineVersion}"
+    //mojopipeline "ai.h2o:mojo2-runtime:${mojoPipelineVersion}"
 }
 //
 // Create a file with version for Python dist task
@@ -66,7 +66,7 @@ def preparePythonTestEnv(environment){
     environment['SPARK_CONF_DIR'] = file("tests/conf/pyunit")
 
     //For MOJO Pipeline
-    environment["sparkling.mojo.pipeline.jar"] = configurations.mojopipeline.resolve().find {it.name.contains("mojo2-runtime")}.absolutePath
+    //environment["sparkling.mojo.pipeline.jar"] = configurations.mojopipeline.resolve().find {it.name.contains("mojo2-runtime")}.absolutePath
 }
 
 //
@@ -344,7 +344,7 @@ task printH2OWheelPackage {
 clean.dependsOn cleanPython
 createVersionFile.dependsOn cleanPython
 distPython.dependsOn createVersionFile
- 
+
 // Build tasks
 task buildPython(dependsOn: distPython)
 build.dependsOn buildPython
